<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_auto_awesome_motion_24"
        android:title="@string/library_feed"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/start_filled"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_boy_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/createPostFragment"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/create_post"
        app:showAsAction="ifRoom" />
</menu>